# mythic-telegram

./: Cargo.toml  README.md
src/: cli.rs  coder.rs  config.rs  file.rs  lib.rs  main.rs
src/coder/: alpha_decoder.rs  alpha_encoder.rs  decoder.rs  encoder.rs  error.rs  header.rs  header_decoder.rs  header_encoder.rs  rgb_decoder.rs  rgb_encoder.rs  util.rs
src/coder/decoder/: alpha_decoder.rs  decode.rs  header_decoder.rs  rgb_decoder.rs
src/coder/encoder/: alpha_encoder.rs  encode.rs  header_encoder.rs  rgb_encoder.rs
tests/: bin_integration_test.rs  integration_test.rs  integration_tests.rs  intergration_tests.rs  lib_integration_test.rs
