[package]
name = "mythic-telegram"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25.1"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0.87"

assert_cmd = "2.0.16"
predicates = "3.1.2"